--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
+<!DOCTYPE html>
+<html lang="pt-br">
 <head>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Aventura</title>
 </head>
 <body>
-    <h1>Cauã</h1>
+    <main>
+        <div>
+            <p>Um dia desses eu estava andandom pela floresta e apareceu um goblin que falou que eu poderia seguir dois caminhos para chegar num tesouro</p>
+            <button>seguir pelo rio</button>
+            <button>caminho obscuro da floresta</button>
+        </div>
+    </main>
 </body>
+</html>
