--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <main>
         <div>
-            <p>Um dia desses eu estava andandom pela floresta e apareceu um goblin que falou que eu poderia seguir dois caminhos para chegar num tesouro</p>
+            <p>Um dia desses eu estava andandom pela floresta e apareceu um goblin que falou que eu poderia seguir dois caminhos para chegar num tesouro.</p>
             <button>seguir pelo rio</button>
             <button>caminho obscuro da floresta</button>
         </div>
